--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="home">
         <div class="home-container">
             <div class="home-photo">
-                <img src="https://github.com/Vineyrythyn/Portfolio/blob/main/IMG-20230922-WA0002.jpg" alt="Your Photo">
+                <img src="IMG-20230922-WA0002.jpg" alt="Your Photo">
             </div>
             <div class="home-content">
                 <h2>Hi, it's me <span>Viney Rythyn Adhiyamaan K</span></h2>
