--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <li>Python</li>
             <li>java</li>
             <li>HTML</li>
-            <li>HTML</li>
             <li>CSS</li>
+            <li>JavaScript</li>
             <li>React.JS</li>
             <li>MYSQL</li>
             <li>Django</li>
